<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_texto"
            android:inputType="textMultiLine"
            android:maxWidth="100dp"
            android:textSize="16sp" />
        <!--
        layout graviti -> se mueve tod el componente
        gravity ->se mueve el contenido del componente

        margin->se da el espacio al componente
        padding -> se da el espacio dentro del componente

        Tamaño de texto: sp
        Tamaño de imagenes: dp
        padding mueve el contenido que esta dentro de la vista
        margin mueve el boton o toda la vista un cierto numero de dps
        -->

        <!--
        inputType tipo de teclado que aparece al momento de selecionar un editText
        -->
        <Button
            android:id="@+id/btnPresionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/txt_registro"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black" />

        <!-- ctrl+alt+l para acomodar las variables en el texto-->

    </LinearLayout>

    <Button
        android:id="@+id/btnPasar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/txt_pasar"
        android:textAllCaps="false"/>


</FrameLayout>
    <!--
    ConstraintLayout    Se vincula por los cuatro lados para saber en donde estará
    LinearLayout        Se acomoda de forma horizontal o vertical
    FrameLayout se acomoda segun gravedades
    RelativeLayout  permite mover los elementos a nuestro gusto


    -->

    <!--
       TextView        Label, textos
       EditText        cajas de texto
       Button          botones
       Spinner         combo,comboBox,dropdown
       CheckBox        selección multiple
       RadioButton     selección unica
       -->
